[aubrey, james, vivian] work in progress; trying to route visits through customers

--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= visit.enter_time %></td>
         <td><%= visit.exit_time %></td>
-        <td><%= link_to 'Show', visit %></td>
-        <td><%= link_to 'Edit', edit_visit_path(visit) %></td>
-        <td><%= link_to 'Destroy', visit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', customer_visit_path(params[:customer_id], visit.id) %></td>
+        <td><%= link_to 'Edit', edit_customer_visit_path(params[:customer_id], visit) %></td>
+        <td><%= link_to 'Destroy', customer_visit_path(params[:customer_id], visit.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Visit', new_visit_path %>
+<%= link_to 'New Visit', new_customer_visit_path(params[:customer_id]) %>
