--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -10,5 +10,5 @@
   <%= @visit.exit_time %>
 </p>
 
-<%= link_to 'Edit', edit_visit_path(@visit) %> |
-<%= link_to 'Back', visits_path %>
+<%= link_to 'Edit', edit_customer_visit_path(@visit) %> |
+<%= link_to 'Back', customer_visits_path %>
