[james] | resolved routing errors for the visits views

--- a/app/views/visits/edit.html.erb
+++ b/app/views/visits/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @visit %> |
+<%= link_to 'Show', customer_visit_path %> |
 <%= link_to 'Back', customer_visits_path %>
