--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_customer_path(@customer) %> |
+<%= link_to 'Visits', customer_visits_path(customer_id: @customer[:id]) %> |
 <%= link_to 'Back', customers_path %>
