--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@visit, :url => customer_visit_path) do |f| %>
+<%= form_for(@visit, :url => customer_visit_path(id: @visit.id)) do |f| %>
   <% if @visit.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@visit.errors.count, "error") %> prohibited this visit from being saved:</h2>
