--- a/app/views/visits/_visit_table.html.erb
+++ b/app/views/visits/_visit_table.html.erb
@@ -10,14 +10,14 @@
   </thead>
 
   <tbody>
-    <% customer_visits.each do |visit| %>
+    <% visits.each do |visit| %>
       <tr>
         <td><%= "Dairy" %></td>
         <td><%= visit.duration %></td>
         <td><%= visit.enter_time %></td>
         <td><%= visit.exit_time %></td>
-        <td><%= link_to 'Edit', edit_customer_visit_path(id: visit[:id]) %></td>
-        <td><%= link_to 'Destroy', customer_visit_path(id: visit[:id]), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_customer_visit_path(@customer, visit) %></td>
+        <td><%= link_to 'Destroy', customer_visit_path(@customer, visit), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
