[james, vivian, aubrey] added product area id to visit model

--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.label :exit_time %><br>
     <%= f.datetime_select :exit_time %>
   </div>
+  <div class="field">
+    <%= f.label :product_area %><br>
+    <%= f.text_field :product_area %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
