[vivian, james, aubrey] added membership number to customers, can create customer visit through restful api

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :membership_number %><br>
+    <%= f.text_field :membership_number %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
