--- a/app/views/visits/_visit_table.html.erb
+++ b/app/views/visits/_visit_table.html.erb
@@ -12,10 +12,10 @@
   <tbody>
     <% visits.each do |visit| %>
       <tr>
-        <td><%= visit.product_area.name %></td>
+        <td><%= binding.pry; visit.product_area.name %></td>
         <td><%= visit.duration %></td>
         <td><%= visit.enter_time %></td>
-        <td><%= visit.exit_time %></td>
+        <td><%= visit.exit_time || '-----' %></td>
         <td><%= link_to 'Edit', edit_customer_visit_path(@customer, visit) %></td>
         <td><%= link_to 'Destroy', customer_visit_path(@customer, visit), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
