--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -16,3 +16,7 @@
 
 <%= link_to 'All customers', customers_path %>
 <%= link_to 'Record new Visit', new_customer_visit_path %>
+
+<div class="demo-container">
+  <div id="placeholder" class="demo-placeholder"></div>
+</div>
