--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -9,6 +9,7 @@
     <%=  render 'no_visits' %>
 <% else %>
     <%=  render 'visit_table', :visits => @customer.visits %>
+    <%=  render 'visit_step_graph', :visits => @customer.visits %>
     <%=  render 'visit_pie_chart', :visits => @customer.visits %>
 <% end %>
 
@@ -16,7 +17,3 @@
 
 <%= link_to 'All customers', customers_path %>
 <%= link_to 'Record new Visit', new_customer_visit_path %>
-
-<div class="demo-container">
-  <div id="placeholder" class="demo-placeholder"></div>
-</div>
