james, aubrey, svetlana | added unprocessed pie chart and smoothed pie chart to visits view, refactored pie_chart.js file, moved the smoothing logic into the customer model, tested customer model.

--- a/app/views/visits/_visit_pie_chart.html.erb
+++ b/app/views/visits/_visit_pie_chart.html.erb
@@ -1,1 +1,3 @@
-<%= tag "canvas", width:"420", height:"400", id: "visitsPieChart", data: {visits: visits.map{|visit| visit.to_pie_chart_json} } %>
+<div>
+    <%= tag "canvas", width:"420", height:"400", id: chart_id, data: {visits: visits.map{|visit| visit.to_pie_chart_json} } %>
+</div>
