--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -10,7 +10,9 @@
 <% else %>
     <%=  render 'visit_table', :visits => @smoothed_visits %>
     <%=  render 'visit_step_graph', :visits => @smoothed_visits %>
-    <%=  render 'visit_pie_chart', :visits => @smoothed_visits %>
+    <%=  render 'visit_table', :visits => @visits %>
+    <%=  render 'visit_pie_chart', :visits => @smoothed_visits, :chart_id => 'smooth-doughnut-chart' %>
+    <%=  render 'visit_pie_chart', :visits => @visits, :chart_id => 'doughnut-chart' %>
 <% end %>
 
 <br>
