--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -9,10 +9,12 @@
     <%=  render 'no_visits' %>
 <% else %>
     <%=  render 'visit_table', :visits => @smoothed_visits %>
-    <%=  render 'visit_step_graph', :visits => @smoothed_visits %>
-    <%=  render 'visit_table', :visits => @visits %>
     <%=  render 'visit_pie_chart', :visits => @smoothed_visits, :chart_id => 'smooth-doughnut-chart' %>
+
+    <%=  render 'visit_table', :visits => @visits %>
     <%=  render 'visit_pie_chart', :visits => @visits, :chart_id => 'doughnut-chart' %>
+
+    <%=  render 'visit_step_graph', :visits => @visits %>
 <% end %>
 
 <br>
