[aubrey] visit doughnut charts are displayed inline; precompiled assets

--- a/app/assets/stylesheets/visits.css.scss
+++ b/app/assets/stylesheets/visits.css.scss
@@ -29,3 +29,16 @@
   line-height: 1.2em;
 }
 
+#pie_chart_container {
+  width: 100%;
+  overflow:auto;
+}
+
+#smooth_chart_container {
+  width: 50%;
+  float: left;
+}
+
+#raw_chart_container {
+  float: right;
+}
