--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -9,18 +9,18 @@
     <%=  render 'no_visits' %>
 <% else %>
   <div id="pie_chart_container">
-    <div id="smooth_chart_container">
-        <%=  render 'visit_table', :visits => @smoothed_visits %>
+      <div id="smooth_chart_container">
         <%=  render 'visit_pie_chart', :visits => @smoothed_visits, :chart_id => 'smooth-doughnut-chart' %>
-    </div>
+        <%=  render 'visit_table', :visits => @smoothed_visits %>
+      </div>
 
-    <div id="raw_chart_container">
-        <%=  render 'visit_table', :visits => @visits %>
-        <%=  render 'visit_pie_chart', :visits => @visits, :chart_id => 'doughnut-chart' %>
-    </div>
+      <div id="raw_chart_container">
+          <%=  render 'visit_pie_chart', :visits => @visits, :chart_id => 'doughnut-chart' %>
+          <%=  render 'visit_table', :visits => @visits %>
+      </div>
   </div>
 
-    <%=  render 'visit_step_graph', :visits => @visits %>
+      <%=  render 'visit_step_graph', :visits => @smoothed_visits %>
 <% end %>
 
 <br>
