james | formatted the visit view for your viewing pleasure

--- a/app/views/visits/_visit_table.html.erb
+++ b/app/views/visits/_visit_table.html.erb
@@ -13,11 +13,11 @@
     <% visits.each do |visit| %>
       <tr>
         <td><%= visit.product_area.name %></td>
-        <td><%= visit.duration %></td>
-        <td><%= visit.enter_time %></td>
-        <td><%= visit.exit_time || '-----' %></td>
+        <td><%= visit.string_numeric_duration %></td>
+        <td><%= visit.formatted_enter_time %></td>
+        <td><%= visit.formatted_exit_time || '-----' %></td>
       </tr>
     <% end %>
   </tbody>
-  <%= 'Total duration: ' + visits.flat_map{|visit| visit.duration}.reduce(:+).to_s %>
+  <%= "Total duration: #{total_duration visits}" %>
 </table>
