james | formatted_exit_time now addresses the case when exit_time is nil

--- a/app/views/visits/_visit_table.html.erb
+++ b/app/views/visits/_visit_table.html.erb
@@ -15,7 +15,7 @@
         <td><%= visit.product_area.name %></td>
         <td><%= visit.string_numeric_duration %></td>
         <td><%= visit.formatted_enter_time %></td>
-        <td><%= visit.formatted_exit_time || '-----' %></td>
+        <td><%= visit.formatted_exit_time %></td>
       </tr>
     <% end %>
   </tbody>
