--- a/app/views/visits/_visit_step_graph.html.erb
+++ b/app/views/visits/_visit_step_graph.html.erb
@@ -1,17 +1,3 @@
 <div class="demo-container">
-  <% visit_times = []
-     visits.map do |visit|
-       visit_times << visit.to_step_graph_times('enter')
-       visit_times << visit.to_step_graph_times('exit')
-    end %>
-  <% visit_product_areas = []
-     visits.map do |visit|
-       visit_product_areas << visit.to_step_graph_product_areas
-       visit_product_areas << visit.to_step_graph_product_areas
-     end%>
-
-  <% visit_data = visit_times.zip(visit_product_areas) %>
-
-  <% label_data = visits.map{|visit| visit.to_step_graph_labels} %>
-  <%= tag "div", id:"visit_step_graph", class:"demo-placeholder", data: {visits: visit_data, labels: label_data } %>
+  <%= tag "div", id:"visit_step_graph", class:"demo-placeholder", data: {visits: @step_graph_visit_data, labels: @step_graph_label_data } %>
 </div>
