--- a/app/views/visits/_visit_pie_chart.html.erb
+++ b/app/views/visits/_visit_pie_chart.html.erb
@@ -1,3 +1,3 @@
 <div>
-    <%= tag "canvas", width:"300", height:"300", id: chart_id, data: {visits: visits.map{|visit| visit.to_pie_chart_json} } %>
+    <%= tag "canvas", width:"300", height:"300", id: chart_id, data: {visits: pie_chart_data(visits) } %>
 </div>
