james | removed animation, readded refresh tag, removed logger from visit controller

--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :head do %>
     <%= javascript_include_tag 'Chart.js' %>
     <%= javascript_include_tag 'visit_pie_chart.js' %>
+    <meta http-equiv="refresh" content="1" />
 <% end %>
 
 <h1><%= "Visits for #{number_to_phone(@customer.membership_number, area_code: true)}" %></h1>
