--- a/app/views/visits/_visit_pie_chart.html.erb
+++ b/app/views/visits/_visit_pie_chart.html.erb
@@ -1,3 +1,3 @@
-<div>
+<div class="chart">
     <%= tag "canvas", width:"300", height:"300", id: chart_id, data: {visits: pie_chart_data(visits) } %>
 </div>
