--- a/app/views/visits/_visit_step_graph.html.erb
+++ b/app/views/visits/_visit_step_graph.html.erb
@@ -1,3 +1,3 @@
-<div class="demo-container">
+<div class="demo-container chart">
   <%= tag "div", id:"visit_step_graph", class:"demo-placeholder", data: {visits: step_graph_data(visits), labels: step_graph_labels(visits) } %>
 </div>
