james | lightening the bg gradient

--- a/app/assets/stylesheets/visits.css.scss
+++ b/app/assets/stylesheets/visits.css.scss
@@ -52,7 +52,7 @@
 
 body {
   height: 100%;
-  background-image: (linear-gradient(white, #eeeeee 30%, #dddddd 70%, #aaaaaa));
+  background-image: (linear-gradient(white, #eeeeee 30%, #dddddd 70%, #dddddd));
 }
 
 html {
