james | added keys

--- a/app/assets/stylesheets/visits.css.scss
+++ b/app/assets/stylesheets/visits.css.scss
@@ -59,3 +59,40 @@
 table {
   border-spacing: 15px 5px;
 }
+
+#yogurt {
+  color: #F9FBFD;
+  font-size: 26px;
+}
+
+#pet {
+  color: #563E3B;
+  font-size: 26px;
+}
+
+#condiments {
+  color: #42968F;
+  font-size: 26px;
+}
+
+#salad {
+  color: #005B7C;
+  font-size: 26px;
+}
+
+#crackers {
+  color: #999999;
+  font-size: 26px;
+}
+
+body {
+  background-color: #aaaaaa;
+}
+
+html {
+  background-color: #aaaaaa;
+}
+
+
+
+
