--- a/app/assets/stylesheets/visits.css.scss
+++ b/app/assets/stylesheets/visits.css.scss
@@ -7,8 +7,8 @@
 
 .demo-container {
   box-sizing: border-box;
-  width: 850px;
-  height: 450px;
+  width: 100%;
+  height: 250px;
   padding: 20px 15px 15px 15px;
   float: left;
   border: 1px solid #ddd;
@@ -28,8 +28,14 @@
 .demo-placeholder {
   width: 100%;
   height: 100%;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.2em;
+}
+
+#chart_containers {
+  float: left;
+  overflow: auto;
+  display: inline-block;
 }
 
 #pie_chart_container {
@@ -44,12 +50,12 @@
 #raw_chart_container {
   float: left;
   display: inline-block;
-
 }
 
 #coupons {
-  padding-top: 372px;
   float: left;
+  padding-top: 379px;
+  display: inline-block;
 }
 
 .chart {
