sarah | find refer to customer by id instead of memb number, highlight coupon if clicked

--- a/app/assets/stylesheets/visits.css.scss
+++ b/app/assets/stylesheets/visits.css.scss
@@ -58,6 +58,12 @@
   display: inline-block;
 }
 
+#coupons .highlighted {
+  font-weight: bold;
+  font-size: 15;
+  color: #005B7C;
+}
+
 .chart {
   opacity: 0.95;
 }
