--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,14 +1,6 @@
-<h1>iBeacon Customer Registry</h1>
+<h1 class="page-header">iBeacon Customer Registry</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
+<table class='customers'>
   <tbody>
     <% @customers.each do |customer| %>
       <tr>
