--- a/app/views/visits/_visit_table.html.erb
+++ b/app/views/visits/_visit_table.html.erb
@@ -4,8 +4,8 @@
       <th>Product Area</th>
       <th>Key</th>
       <th>Duration</th>
-      <th>Enter time</th>
-      <th>Exit time</th>
+      <th>Enter Time</th>
+      <th>Exit Time</th>
       <th></th>
     </tr>
   </thead>
