--- a/app/views/visits/_coupons_served_up.html.erb
+++ b/app/views/visits/_coupons_served_up.html.erb
@@ -1,16 +1,14 @@
-<table id="coupon-table">
-  <thead>
-    <tr>
-      <th>Coupons served up</th>
-    </tr>
-  </thead>
+<div class='coupons'>
+  <h3>Coupons Delivered</h3>
 
-  <tbody>
-  <% areas.each do |area| %>
-      <tr>
-        <td><span class=<%=coupon_class(coupons_map[area.name], clicked_coupons)%>><%= coupons_map[area.name] %></span></td>
-        <td><%= image_tag coupons_image_map[area.name], size: "100x100"%></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
+  <div>
+    <% areas.each do |area| %>
+      <div class="coupon pull-left">
+        <div><%= image_tag coupons_image_map[area.name], size: "100x100"%></div>
+        <div><span><%= coupons_map[area.name][:name] %></span></div>
+        <div><span><%= coupons_map[area.name][:description] %></span></div>
+        <div class="<%=coupon_event(coupons_map[area.name][:name], clicked_coupons)%>"><%= coupon_event(coupons_map[area.name][:name], clicked_coupons)%></div>
+      </div>
+    <% end %>
+  </div>
+</div>
