--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :head do %>
+  <meta http-equiv="refresh" content="1" />
+<% end %>
 
 <h1 class="page-header"><%= "Visits for Customer #{number_to_phone(@customer.membership_number, area_code: true)}" %></h1>
 
