sarah | rename product areas

--- a/app/assets/stylesheets/visits.css.scss
+++ b/app/assets/stylesheets/visits.css.scss
@@ -87,7 +87,7 @@ th, td {
 }
 
 
-#yogurt {
+#dairy {
   color: #A0C9E8;
   font-size: 26px;
 }
@@ -97,7 +97,7 @@ th, td {
   font-size: 26px;
 }
 
-#condiments {
+#soup {
   color: #42968F;
   font-size: 26px;
 }
