sarah | fixed up customer id vs membership number *again. add ajax updates to coupons list

--- a/app/assets/stylesheets/visits.css.scss
+++ b/app/assets/stylesheets/visits.css.scss
@@ -66,8 +66,9 @@
 }
 #activity-chart .activity-chart-legend .legend-wrapper {
   float: left;
-  width: 150px;
   font-size: 11px;
+  width: 90px;
+  margin-top: 10px;
 }
 #activity-chart .activity-chart-legend .square {
   border: #cccccc 1px solid;
@@ -110,9 +111,10 @@
   margin-top: 20px;
   text-align: center;
 }
-.strong {
+.coupon-value {
   font-weight: bold;
   font-size: 18px;
+  margin-bottom: 5px;
 }
 .small {
   font-size: 11px;
