--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -5,7 +5,7 @@
     <% @customers.each do |customer| %>
       <tr>
         <td><%= "Member number #{number_to_phone(customer.membership_number, area_code: true)}" %></td>
-        <td><%= link_to 'Visits', customer_visits_path(customer.id) %></td>
+        <td><%= link_to 'Visits', customer_visits_path(customer.membership_number) %></td>
       </tr>
     <% end %>
   </tbody>
