--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,3 +1,7 @@
+<%= javascript_include_tag 'visit_pie_chart' %>
+<%= javascript_include_tag 'visit_activity_chart' %>
+<%= javascript_include_tag 'visit_ajax' %>
+
 <h1 class="page-header"><%= "Customer #{number_to_phone(@customer.membership_number, area_code: true)}" %></h1>
 
 
@@ -8,13 +12,14 @@
       <div id="pie_chart_container">
           <div id="smooth_chart_container">
             <h3>Time Spent in Product Areas</h3>
+            <%#= @smoothed_visits.inspect %>
             <%= render 'visit_pie_chart', :visits => @smoothed_visits, :chart_id => 'smooth-doughnut-chart' %>
             <%= render 'visit_table', :visits => @smoothed_visits %>
             <%= render partial: 'visits_activity_chart' %>
           </div>
 
           <div id="coupons">
-            <%= render partial: 'coupons_served_up', locals: {areas: unique_areas(@visits), clicked_coupons: @clicked_coupons} %>
+            <%#= render partial: 'coupons_served_up', locals: {areas: unique_areas(@visits), clicked_coupons: @clicked_coupons} %>
           </div>
       </div>
 
