--- a/app/views/visits/_visit_pie_chart.html.erb
+++ b/app/views/visits/_visit_pie_chart.html.erb
@@ -1,3 +1,3 @@
 <div class="chart pull-left">
-    <%= tag "canvas", width:"180", height:"180", id: chart_id, data: {visits: pie_chart_data(visits) } %>
+    <%= tag "canvas", width:"180", height:"180", id: chart_id %>
 </div>
