--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -12,12 +12,11 @@
           <div id="smooth_chart_container">
             <h3>Time Spent in Product Areas</h3>
             <%= render 'visit_pie_chart', :visits => @smoothed_visits, :chart_id => 'smooth-doughnut-chart' %>
-            <%= render 'visit_table', :visits => @smoothed_visits %>
+            <div id="visit-table"></div>
             <%= render partial: 'visits_activity_chart' %>
           </div>
 
-          <div id="coupons">
-          </div>
+          <div id="coupons"></div>
       </div>
 
 
